--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		<link rel="stylesheet" href="assets/vendor/owl.carousel/assets/owl.theme.default.min.css">
 		<link rel="stylesheet" href="assets/vendor/magnific-popup/magnific-popup.min.css">
 		<link rel="stylesheet" href="assets/vendor/locomotive-scroll/locomotive-scroll.min.css">
-
+		<script src="https://kit.fontawesome.com/8aa54e52b5.js" crossorigin="anonymous"></script>
 		<!-- Theme CSS -->
 		<link rel="stylesheet" href="assets/css/theme.css">
 		<link rel="stylesheet" href="assets/css/theme-elements.css">
@@ -193,7 +193,7 @@
 								<div class="p-absolute transform3dy-n50 top-50pct right-0 text-1 d-none d-xl-block">
 									<span class="rotate-l-90 d-block text-1 text-uppercase p-relative px-4">
 										<i class="fa-solid fa-arrow-down p-absolute left-0 custom-arrow-anim"></i>
-										Scroll For More
+										Scroll For More 
 										<i class="fa-solid fa-arrow-down p-absolute right-0 custom-arrow-anim"></i>
 									</span>
 								</div>
@@ -230,13 +230,15 @@
 							<div class="col-lg-6 custom-ws-initial min-vh-xl-100 d-xl-flex align-items-center">
 								<div class="p-5 w-100">
 									<h5 class="mt-4 mt-xl-0">About Us</h5>
-									<h2>Who We Are</h2>
+									<h2>Quienes Somos</h2>
 
-									<p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec velit magna, consectetur at suscipit eu, dapibus vel odio. Mauris ac nulla at ligula interdum ullamcorper.</p>
+									<p class="lead">
+										En Gearhead, nos dedicamos apasionadamente a transformar ideas en experiencias digitales impactantes. Nuestra empresa fusiona la creatividad y la innovación tecnológica para ofrecer soluciones de marketing y desarrollo web que destacan en el siempre cambiante paisaje digital. 
+									</p>
 
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec velit magna, consectetur at suscipit eu, dapibus vel odio. Mauris ac nulla at ligula interdum ullamcorper.</p>
+									<!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec velit magna, consectetur at suscipit eu, dapibus vel odio. Mauris ac nulla at ligula interdum ullamcorper.</p> -->
 
-									<p class="text-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec velit magna, consectetur at suscipit eu, dapibus vel odio. Mauris ac nulla at ligula interdum ullamcorper.</p>
+									<p class="text-2">Entendemos que cada cliente es único, por lo que adoptamos un enfoque personalizado para c ada proyecto. Nuestro equipo de profesionales talentosos combina la creatividad con la experiencia tecnica para crear soluciones web que no solo cautivan visualmente, sino que también general resultados tangibles.</p>
 
 									<div class="d-xl-flex flex-row align-items-center mt-5">
 										<div class="pe-xl-5 text-center text-lg-start">
@@ -270,16 +272,16 @@
 							<div class="vw-xl-25 custom-ws-initial min-vh-xl-100 d-xl-flex align-items-center">
 								<div class="p-5 text-color-light">
 									<h5 class="mt-4 mt-xl-0 text-color-light">What We Do</h5>
-									<h2 class="text-color-light">Areas of expertise</h2>
+									<h2 class="text-color-light">Lo Que Hacemos</h2>
 
-									<p class="lead text-color-light">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+									<p class="lead text-color-light">Descubre nuestras especialidades</p>
 									<a href="#contact" data-hash class="custom-link-1 custom-link-1-light text-color-light">Contact Us</a>
 								</div>
 							</div>
 							<div class="vw-xl-25 custom-ws-initial min-vh-xl-100 d-flex align-items-center custom-border-left-1">
 								<div class="p-5 text-color-light" data-scroll data-scroll-direction="vertical" data-scroll-speed="-0.3" data-scroll-offset="-100%">
 									<img width="100" src="assets/img/demos/creative-agency-1/icons/icon-1.svg" alt="" data-icon data-plugin-options="{'onlySVG': true, 'extraClass': 'svg-stroke-color-light'}" />
-									<h3 class="text-color-light mt-4">Strategy</h3>
+									<h3 class="text-color-light mt-4">Consultoría</h3>
 									<p class="text-color-light opacity-8 font-weight-normal pt-3">Lorem ipsum dolor sit amet, consec tetur adipiscing elit lorem ipsum dolor sit amet, consectetur.</p>
 									<ul class="list-unstyled custom-list-1 text-2">
 										<li>- Web Development</li>
@@ -292,7 +294,7 @@
 							<div class="vw-xl-25 custom-ws-initial min-vh-xl-100 d-xl-flex align-items-center">
 								<div class="p-5 text-color-light" data-scroll data-scroll-direction="vertical" data-scroll-speed="0.3" data-scroll-offset="-100%">
 									<img width="100" src="assets/img/demos/creative-agency-1/icons/icon-2.svg" alt="" data-icon data-plugin-options="{'onlySVG': true, 'extraClass': 'svg-stroke-color-light'}" />
-									<h3 class="text-color-light mt-4">Web Development</h3>
+									<h3 class="text-color-light mt-4">Desarrollo Web</h3>
 									<p class="text-color-light opacity-8 font-weight-normal pt-3">Lorem ipsum dolor sit amet, consec tetur adipiscing elit lorem ipsum dolor sit amet, consectetur.</p>
 									<ul class="list-unstyled custom-list-1 text-2">
 										<li>- Web Development</li>
@@ -305,7 +307,7 @@
 							<div class="vw-xl-25 custom-ws-initial min-vh-xl-100 d-xl-flex align-items-center">
 								<div class="p-5 text-color-light" data-scroll data-scroll-direction="vertical" data-scroll-speed="-0.3" data-scroll-offset="-100%">
 									<img width="100" src="assets/img/demos/creative-agency-1/icons/icon-3.svg" alt="" data-icon data-plugin-options="{'onlySVG': true, 'extraClass': 'svg-stroke-color-light'}" />
-									<h3 class="text-color-light mt-4">Digital Marketing</h3>
+									<h3 class="text-color-light mt-4">Branding</h3>
 									<p class="text-color-light opacity-8 font-weight-normal pt-3">Lorem ipsum dolor sit amet, consec tetur adipiscing elit lorem ipsum dolor sit amet, consectetur.</p>
 									<ul class="list-unstyled custom-list-1 text-2">
 										<li>- Web Development</li>
@@ -318,7 +320,7 @@
 							<div class="vw-xl-25 custom-ws-initial min-vh-xl-100 d-xl-flex align-items-center">
 								<div class="p-5 text-color-light" data-scroll data-scroll-direction="vertical" data-scroll-speed="0.3" data-scroll-offset="-100%">
 									<img width="100" src="assets/img/demos/creative-agency-1/icons/icon-4.svg" alt="" data-icon data-plugin-options="{'onlySVG': true, 'extraClass': 'svg-stroke-color-light'}" />
-									<h3 class="text-color-light mt-4">SEO Services</h3>
+									<h3 class="text-color-light mt-4">Marketing</h3>
 									<p class="text-color-light opacity-8 font-weight-normal pt-3">Lorem ipsum dolor sit amet, consec tetur adipiscing elit lorem ipsum dolor sit amet, consectetur.</p>
 									<ul class="list-unstyled custom-list-1 text-2">
 										<li>- Web Development</li>
@@ -335,7 +337,7 @@
 							<div class="vw-xl-25 custom-ws-initial min-vh-xl-100 d-flex align-items-center custom-border-right-1">
 								<div class="p-5 w-100">
 									<h5 class="mt-4 mt-xl-0">Our Work</h5>
-									<h2>Selected Projects</h2>
+									<h2>Nuestros Proyectos</h2>
 
 									<p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
 
@@ -398,7 +400,7 @@
 							</div>
 
 						</section>
-						<section class="d-xl-flex flex-row pb-5 pb-xl-0 p-relative vh-xl-100 min-vh-xl-100 justify-content-center align-items-center bg-color-secondary text-color-light">
+						<!-- <section class="d-xl-flex flex-row pb-5 pb-xl-0 p-relative vh-xl-100 min-vh-xl-100 justify-content-center align-items-center bg-color-secondary text-color-light">
 
 							<div class="vw-xl-75 custom-ws-initial min-vh-xl-100 d-flex align-items-center text-center p-relative overflow-hidden">
 
@@ -537,7 +539,7 @@
 								</div>
 							</div>
 
-						</section>
+						</section> -->
 						<section class="d-xl-flex flex-row p-relative vh-xl-100 min-vh-xl-100 justify-content-center align-items-center bg-color-secondary" id="contact">
 
 							<div class="min-vw-xl-75 custom-ws-initial min-vh-xl-100 d-flex align-items-center p-relative overflow-hidden">
@@ -579,14 +581,12 @@
 												</div>
 											</div>
 											<div class="col-xl-3 text-start">
-												<h4 class="text-color-light opacity-6 font-weight-normal mb-4 mt-4 mt-xl-0">Our Services</h4>
+												<h4 class="text-color-light opacity-6 font-weight-normal mb-4 mt-4 mt-xl-0">Nuestros Servicios</h4>
 												<ul class="list-unstyled custom-list-1 text-1">
-													<li>- Web Development</li>
+													<li>- Consultoría</li>
 													<li>- Marketing</li>
-													<li>- Web Development</li>
-													<li>- Marketing</li>
-													<li>- Web Development</li>
-													<li>- Marketing</li>
+													<li>- Desarrollo Web</li>
+													<li>- Branding</li>
 												</ul>
 											</div>
 											<div class="col-xl-3 text-start">
